CR-2008-12-03-0: Bugfix:     - fixed unclear error message in wait_for_remote_file()
                             - increased timeouts when waiting for qmaster lock file
                               in shadowd/migrate test from 30 to 60 seconds.
                 Review:     DG

RH-2008-12-02-0: Bugfix:     open_remote_spawn_process could not handle germany
                             password question. To match the password question
                             the following regexp is now used: [Pp]asswor[dt]:
                 Review:     CR

JG-2008-12-02-0: Bugfix:     fixed 6.0 and 6.1 installation without jmx port set
				     Review:     CR

HP-2008-12-02-0: Bugfix:     Fixed error in "pwd" check in user_permissions test
                 Issue:      268
                 Review:     MD   

CR-2008-12-01-0: Bugfix:     Fixed TCL error in testsuite framework procedure
                             "execute_test_preparation_procedure()"

TB-2008-11-28-1: Bugfix:     o fixed Hedeby test slo/maxPendingJobs/withJobFilter,
                               architecture from host-config can be different
                               from arch of util/arch
                 Review:     RH

EB-2008-11-28-0: Bugfix:     - fixed bug which were caused by changes of perl
										 script in maintrunc.
									  - Added handling of ps output for free bsb
									    architecture in TS
									  - Fixed bug which made TS unusable if it was used
									    in environments with ssh login on hosts without
										 password
									  - added additional TS scenarios to jsv_script and
									  	 jsv_ge tests
				     Review:     CR

TB-2008-11-28-0: Cleanup:    o cleanup of Hedeby test slo/min_resource
                 Review:     MG

LP-2008-11-27-1: Bugfix:     Fixed else if syntax problem
                 Review:     EB

LP-2008-11-27-0: Enhancem.:  -no-jmx is used when JMX_PORT == 0
                 Review:     MD, AP
